# homeboard

./: .env.example  .gitignore  Dockerfile  README.md  air.py  api.py  api_shared.py  cache_layer.py  homeboard.code-workspace  main.py  mid_forecast.py  naver_calendar.py  package-lock.json  package.json  requirements.txt  run.sh  settings.py  settings.yaml  tailwind.config.js  weather.py
apps/api/: .env.example  Dockerfile  Procfile  app.json  pyproject.toml  requirements.txt  run.sh
apps/api/app/: air.py  api.py  cache_layer.py  discord.py  main.py  mid_forecast.py  settings.py  weather.py
apps/api/static/css/: tailwind.css
apps/api/static/templates/: home.html
apps/mobile/: pubspec.yaml
apps/mobile/lib/: main.dart
kindle/kindle-dash/: config.xml  menu.json
static/css/: tailwind.css
static/templates/: home.html  kindle_home.html
