[project]
name = "homeboard-api"
version = "0.1.0"
description = "FastAPI home dashboard API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "pydantic-settings==2.10.1",
    "pyyaml==6.0.2",
    "playwright==1.52.0",
    "pillow==11.2.1",
    "caldav==1.4.0",
]

[tool.uv]
package = false
